# kagi

./: KAGI_core.lean  KAGI_design.md  README.md  ROADMAP.md  pyproject.toml
examples/: basic.kagi  bootstrap.kg  hello_arg_fn.ksrc  hello_concat.ksrc  hello_fn.ksrc  hello_if.ksrc  hello_if_stmt.ksrc  hello_let.ksrc  hello_let_concat.ksrc  hello_let_string.ksrc  hello_print_concat.ksrc  selfhost_frontend.kir.json  selfhost_frontend.ks
examples/selfhost_bundles/: hello.pipeline.json  hello_concat.pipeline.json
examples/selfhost_entries/: hello.hir.txt  hello.kir.txt  hello.lower.txt  hello.parse.txt  hello_arg_fn.analysis.txt  hello_arg_fn.hir.txt  hello_arg_fn.kir.txt  hello_arg_fn.pipeline.txt  hello_fn.analysis.txt  hello_fn.hir.txt  hello_fn.kir.txt  hello_fn.pipeline.txt  hello_if.hir.txt  hello_if.kir.txt  hello_if.parse.txt  hello_if.pipeline.txt  hello_if_stmt.hir.txt  hello_if_stmt.kir.txt  hello_if_stmt.pipeline.txt  hello_let.parse.txt  hello_let_concat.hir.txt  hello_let_concat.kir.txt  hello_let_concat.pipeline.txt  hello_let_string.hir.txt  hello_let_string.kir.txt  hello_let_string.parse.txt  hello_let_string.pipeline.txt  hello_print_concat.hir.txt  hello_print_concat.kir.txt  hello_print_concat.parse.txt  hello_twice.analysis.txt  hello_twice.hir.txt  hello_twice.kir.txt  (+2 more)
tests/: test_bundle_kir_future.py  test_cpython_dependency_boundary.py  test_full_selfhost_strict.py  test_golden_pipeline.py  test_kir_abi.py  test_native_host_boundary.py  test_runtime.py  test_subset_builders.py  test_subset_parser_host_dependency.py  test_subset_typecheck.py
(+68 files in other folders)
