[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kagi"
version = "0.1.0"
description = "KAGI core runtime based on the Lean minimal kernel"
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
kagi = "kagi.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
